# inference_engine_zoo

./: .gitignore  CMakeLists.txt  README.md  a.out  build_run.sh  config.ini  example.cpp  main.cpp  run.sh  test.ini
docker/: Dockerfile  aarch64.Dockerfile  jetson.Dockerfile  jetson_NX.Dockerfile  x86_64.Dockerfile
libs/configparser/: CMakeLists.txt  configparser.cpp
libs/onnxruntime/: CMakeLists.txt  frvf_onnx.cpp
libs/onnxruntime/include/: frvf_onnx.h
libs/onnxruntime/source/: frvf_onnx.cpp
libs/trtruntime/: CMakeLists.txt
libs/trtruntime/include/: frvf_trt.h  trt_logger.h  trt_utils.h
libs/trtruntime/source/: frvf_trt.cpp
output/: AttentionResnet56.onnx.csv  AttentionResnet92.onnx.csv  IResnet100.onnx.csv  IResnet152.onnx.csv  IResnet50.onnx.csv  IResnetCA100.onnx.csv  IResnetCA152.onnx.csv  IResnetCA50.onnx.csv  IResnetCBAM100.onnx.csv  IResnetCBAM152.onnx.csv  IResnetSA100.onnx.csv  IResnetSA152.onnx.csv  IResnetSA50.onnx.csv  IResnetSE100.onnx.csv  IResnetSE152.onnx.csv  IResnetSE50.onnx.csv  MobileFaceNet.onnx.csv
